1) Обновление бизнес-логики для соответствия ТЗ